Se prueba flujos de secuencias

--- a/App_LUMINOVA/templates/deposito/deposito_solicitudes_insumos.html
+++ b/App_LUMINOVA/templates/deposito/deposito_solicitudes_insumos.html
@@ -20,13 +20,13 @@
     <table class="table table-hover">
         <thead class="table-light">
             <tr>
-                <th>N° OP</th>
-                <th>Producto</th>
-                <th class="text-center">Cantidad a Producir</th>
-                <th>Cliente OV</th>
-                <th>Fecha Solicitud OP</th>
-                <th>Estado OP</th>
-                <th class="text-center">Acciones</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">N° OP</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Producto</th>
+                <th class="text-center" style="background-color: #014BAC; color: white;">Cantidad a Producir</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Cliente OV</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Fecha Solicitud OP</th>
+                <th class="color-thead" style="background-color: #014BAC; color: white;">Estado OP</th>
+                <th class="text-center" style="background-color: #014BAC; color: white;">Acciones</th>
             </tr>
         </thead>
         <tbody>
