--- a/App_LUMINOVA/templates/deposito/deposito_sidebar.html
+++ b/App_LUMINOVA/templates/deposito/deposito_sidebar.html
@@ -20,11 +20,12 @@
             <li class="nav-item">
                 <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center {% if request.path == url_deposito_recepcion %}active{% endif %}" href="{{ url_deposito_recepcion }}">
                     <i class="bi bi-truck me-2"></i> <span class="ms-2">Recepción de Pedidos</span>
-                    {% with ocs_en_transito_count=ordenes_a_recibir.count %}
-                        {% if ocs_en_transito_count > 0 %}
-                            <span class="badge bg-success ms-auto">{{ ocs_en_transito_count }}</span>
-                        {% endif %}
-                    {% endwith %}
+                    {# --- INICIO DE LA MODIFICACIÓN --- #}
+                    {% if ocs_en_transito_count > 0 %}
+                        {# Usamos la nueva variable del contexto global y le damos el color verde (bg-success) #}
+                        <span class="badge bg-success ms-auto">{{ ocs_en_transito_count }}</span>
+                    {% endif %}
+                    {# --- FIN DE LA MODIFICACIÓN --- #}
                 </a>
             </li>
             <li class="nav-item">
